--- a/Server/implicit_grant/public/index.html
+++ b/Server/implicit_grant/public/index.html
@@ -1,35 +1,13 @@
 <!doctype html>
 <html>
   <head>
-    <title>Example of the Implicit Grant flow with Spotify</title>
+    <title>Spotify</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <style type="text/css">
-      #login, #loggedin {
-        display: none;
-      }
-      .text-overflow {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        width: 500px;
-      }
-    </style>
   </head>
 
   <body>
-    <div class="container">
-      <div id="login">
-        <h1>This is an example of the Implicit Grant flow</h1>
-        <button id="login-button" class="btn btn-primary">Log in with Spotify</button>
-      </div>
-      <div id="loggedin">
-        <div id="user-profile">
-        </div>
-        <div id="oauth">
-        </div>
-      </div>
-    </div>
-
+    <div id="login-button" />
+    
     <script id="user-profile-template" type="text/x-handlebars-template">
       <h1>Logged in as {{display_name}}</h1>
       <div class="media">
@@ -131,8 +109,8 @@
 
           document.getElementById('login-button').addEventListener('click', function() {
 
-            var client_id = 'CLIENT_ID'; // Your client id
-            var redirect_uri = 'REDIRECT_URI'; // Your redirect uri
+            var client_id = '7e00a052d0fc43e5a97d60733cfb52ff'; // Your client id
+            var redirect_uri = 'http://localhost:3000/home'; // Your redirect uri
 
             var state = generateRandomString(16);
 
@@ -147,7 +125,7 @@
             url += '&state=' + encodeURIComponent(state);
 
             window.location = url;
-          }, false);
+          }(), false);
         }
       })();
     </script>
